--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
+    "fix": "^0.0.3",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "npm": "^10.6.0",
@@ -40,7 +41,7 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
-    "react-native-masked-text": "^1.13.0",
+    "react-native-masked-text": "^1.12.5",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
